# rehab-monitoring-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Eodyne_Clinical_Decision_Support.md  README.md  main.py  new_requirement.md  pyproject.toml  requirements-deploy.txt  requirements.txt  run_web.py
.claude/: settings.local.json
card_store_all/: p4730_w2026-04-19.json  p4735_w2026-03-08.json  p4755_w2026-04-26.json
chatbot/: chat_service.py  clinician_tests_runner.py  clinician_tests_store.py  config_store.py  ingest.py  kb.md  kb.txt  patient_chat_service.py  patient_config_store.py  patient_tests_runner.py  patient_tests_store.py  retriever.py  triage_prompt_store.py
chatbot/config/: active.json
chatbot/index/: chunks.jsonl  manifest.json  vectors.npy
chatbot/patient_config/: active.json
crtv/: __init__.py
data/: NEST_clinical_scores.csv  NEST_dm_plus.csv  NEST_patient.csv  NEST_performance_estimators_plus.csv  NEST_prescription_app.csv  NEST_prescription_plus.csv  NEST_recording_app.csv  NEST_recording_plus.csv  NEST_session_app.csv  NEST_session_plus.csv  nest_self_reports.csv  protocol.csv
demo_mining/: build_cards.py  card_store.py  demo_selection.json  inspection.html  mine_features.py  render_artifact.py  score_and_rank.py  shortlist.json  windows_smoke.jsonl
deploy/: cloud-run-deploy.sh  setup-secrets.sh
docs/: gcp-deploy-guide.md  technical.md  user_guide.md
prompts/: README.md  patient_checkin.txt  triage_system.txt
scripts/: verify_openai.py
tests/: test_adherence.py  test_checkin_policy.py  test_difficulty_builder.py
(+89 files in other folders)
