[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crtv"
version = "0.1.0"
description = "Continuous Rehab Triage + Voice for Eodyne RGS (MedGemma Impact Challenge)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Eodyne" }]
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "transformers>=4.40",
    "accelerate>=0.25",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
# For CRTV_LLM_PROVIDER=openai (OpenAI, Azure, or any OpenAI-compatible API)
api = ["openai>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["crtv*"]
